--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+
   <h4 class="matlaby">EXCELLENT MATLAB SOLVERS AND DATA ANALYST</h4>
 
   <!-- Sidebar -->
@@ -47,11 +48,46 @@
       </div>
     </div>
   </header>
+  
+
+    <!-- Main Container -->
+    <div class="ycontainer">
+      <div class="welcome-section">
+          <h1>Welcome to Our Services!</h1>
+          <p>We are delighted to have you here. Our dedicated team offers a variety of professional services that will cater to your unique needs.</p>
+      </div>
+
+      <!-- Services Section -->
+      <div class="services-section">
+          <h2>What We Offer</h2>
+          <div class="services-grid">
+              <div class="service-card">
+                  <h3>Assignment Help</h3>
+                  <p>We provide plagiarism-free assignment help with a Turnitin report to ensure authenticity and quality.</p>
+              </div>
+              <div class="service-card">
+                  <h3>App Development</h3>
+                  <p>Our team delivers high-quality, user-friendly mobile applications tailored to your business needs.</p>
+              </div>
+              <div class="service-card">
+                  <h3>Web Development</h3>
+                  <p>We build stunning and responsive websites that ensure a great user experience across all devices.</p>
+              </div>
+              <div class="service-card">
+                  <h3>Data Analysis</h3>
+                  <p>We analyze your data to provide actionable insights that drive business growth and efficiency.</p>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
+
 
   <div class="messag cousemessage" id="services">
-    <h2 class="solvers">WELCOME TO MATLAB AND DATA ANALYSIS SOLVERS   <span class="entail"> +254714047751</span>  </h2>
+    <h2 class="solvers">WE THE MATLAB AND DATA ANALYSIS SOLVERS   <span class="entail"> +254714047751</span>  </h2>
     <h3>YOUR DATA ANALYSIS,WEB DEVELOPMENT AND MATLAB SERVICE BAY</h3><br><br>
-     <h5>we offer the following services</h5><br>
+     <h5>these are additional services we offer </h5><br>
 
     <ul>
     <li><a href="">DATA ANALYSIS</a></li>
